Datatables button para descargar reportes en CSV

--- a/reportes.html
+++ b/reportes.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="Resources/Content/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="Resources/Content/datatables.min.css" />
     <link rel="stylesheet" type="text/css" href="Resources/Content/jquery-ui.min.css" />
+    <link rel="stylesheet" type="text/css" href="Resources/Content/buttons.dataTables.min.css" />
     <title>Reportes</title>
 </head>
 <body>
@@ -83,11 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div id="resultado_rpt">
-                
-
-                
-            </div>
+            <div id="resultado_rpt"></div>
         </div>
     </form>
 </body>
@@ -96,4 +93,8 @@
 <script src="Resources/Scripts/bootstrap.min.js"></script>
 <script src="Resources/Scripts/datatables.min.js"></script>
 <script src="Resources/Scripts/jquery-ui.min.js"></script>
+<script src="Resources/Scripts/dataTables.buttons.min.js"></script>
+<script src="Resources/Scripts/jszip.min.js"></script>
+<script src="Resources/Scripts/vfs_fonts.js"></script>
+<script src="Resources/Scripts/buttons.html5.min.js"></script>
 <script src="js/reportes.js"></script>
