--- a/reportes.html
+++ b/reportes.html
@@ -40,6 +40,12 @@
                               Usar todas las fechas
                             </label>
                         </div>
+                        <div class="form-check" id="div_chkSort">
+                            <input class="form-check-input" type="checkbox" value="" id="chkSort">
+                            <label class="form-check-label" for="chkSort">
+                              De menor a mayor
+                            </label>
+                        </div>
                     </div>
                     <div class="col-sm-2">
                         <br>
@@ -59,7 +65,7 @@
                             <label>Fecha final</label>
                             <input type="text" class="form-control" placeholder="Fecha final" id="to" name="to" style="cursor: pointer;" readonly>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-sm-3" id="div_pais">
                             <label>País</label>
                             <select class="form-control" id="list_paises" name="list_paises">
                                 <option value="" hidden>Seleccione</option>
