add items select

--- a/reportes.html
+++ b/reportes.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="col-sm-3" id="div_pais">
                             <label>País</label>
-                            <select class="form-control" id="list_paises" name="list_paises">
+                            <select class="form-control" id="list_paises" name="list_paises" onchange="getCircuit()">
                                 <option value="" hidden>Seleccione</option>
                                 <option value="SV">SV</option>
                                 <option value="CR">CR</option>
