--- a/reportes.html
+++ b/reportes.html
@@ -55,6 +55,13 @@
                         <br>
                         <button type="button" class="btn btn-default" id="btnLimpiar">Limpiar</button>
                     </div>
+                    
+                    <div class="col-sm-12" id="div_movies">
+                        <br>
+                        <label>Pelicula</label>
+                        <input type="text" class="form-control" placeholder="Aquaman" id="movies" name="movies" list="list_movies">
+                        <datalist id="list_movies"></datalist>
+                    </div>
                     <div class="col-sm-12" id="div_filtros">
                         <hr>
                         <div class="col-sm-3">
