--- a/reportes.html
+++ b/reportes.html
@@ -90,6 +90,10 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-sm-12">
+                    <br>
+                    <button type="button" class="btn btn-primary btn-block" onclick="window.location.href='http://localhost/CinemaApp'">Cargar Datos</button>
+                </div>
             </div>
             <div id="resultado_rpt"></div>
         </div>
